# uts-snc-and-robotics-fetchbot

./: README.md
fetchbot_src/: .gitignore  CMakeLists.txt  FetchBotRecyclesGUI.mlapp  ImageConverter.h  RobotTemplateClass.m  armControl.cpp  depthImRead.cpp  headCamera.cpp  headCamera.h  hsvTrackbar.h  imageListener.cpp  joint_controller.cpp  joint_controller.h  loopTemplate.m  main.cpp  matlab_script.sh  package.xml  perception.cpp  robotHead.h  sub2Image.cpp  sub2Points.cpp  testArmControl.cpp  testHeadControl.cpp
fetchbot_src/GUI/template_app/appdesigner/: appModel.mat
fetchbot_src/GUI/template_app/matlab/: document.xml
fetchbot_src/GUI/template_app/metadata/: appMetadata.xml  coreProperties.xml  mwcorePropertiesExtension.xml  mwcorePropertiesReleaseInfo.xml
fetchbot_src/data/: readme.md
fetchbot_src/launch/: fetch_world.launch  setupFetchSim.launch
fetchbot_src/matlab/: HeadCamera.m  RobotTemplateClass.asv  RobotTemplateClass.m  matlab_main.m  myControlAlgorithm.m  myPerceptionAlgorithm.m  solveRMRC.m  testRMRC.m
fetchbot_src/matlab/FetchBotSimulation/: Assignment1Main.asv  Assignment1Main.m  Assignment2Main.m  FetchBotRecyclesGUI.mlapp  HeadCamera.m  IsCollision.asv  IsCollision.m  JointController.asv  JointController.m  RectangularPrism.m  RobotTemplateClass.m  appControl.m
fetchbot_src/matlab/FetchBotSimulation/@Brick/: Brick.m
fetchbot_src/matlab/FetchBotSimulation/@CollisionCube/: CollisionCube.m  cube_one.ply  cube_two.ply
fetchbot_src/matlab/FetchBotSimulation/@Collisions/: CheckCollision.m  GetGoalJointState.m  IsCollision.m
fetchbot_src/matlab/FetchBotSimulation/@Cone/: Cone.m  cone.ply
fetchbot_src/matlab/FetchBotSimulation/@EmergencyStop/: EStop.ply  EmergencyStop.m
fetchbot_src/matlab/FetchBotSimulation/@EnvironmentSetUp/: EnvironmentSetUp.asv  EnvironmentSetUp.m
fetchbot_src/matlab/FetchBotSimulation/@FetchRobot/: FetchRobot.asv  FetchRobot.m
fetchbot_src/matlab/FetchBotSimulation/@FireExtinguisher/: FireExtinguisher.m  FireExtinguisher.ply
fetchbot_src/matlab/FetchBotSimulation/@JointController/: JointController.m
fetchbot_src/matlab/FetchBotSimulation/@LinearUR5e/: LinearUR5e.m
fetchbot_src/matlab/FetchBotSimulation/@Robot/: Robot.m
fetchbot_src/matlab/FetchBotSimulation/@Simulation/: Simulation.asv  Simulation.m
fetchbot_src/matlab/FetchBotSimulation/@Table/: Table.asv  Table.m  Welded_Table.ply
fetchbot_src/matlab/FetchBotSimulation/@Testing/: Testing.asv  Testing.m
fetchbot_src/matlab/FetchBotSimulation/@Trash_bin/: Trash_bin.asv  Trash_bin.m  big_bin.ply  short_bin_five.ply  short_bin_four.ply  short_bin_four_one.ply  short_bin_three.ply  short_bin_two.ply
fetchbot_src/matlab/FetchBotSimulation/@UR3/: UR3.m
fetchbot_src/matlab/FetchBotSimulation/@appControl/: appControl.asv  appControl.m
fetchbot_src/models/e_stop/: model.config  model.sdf
fetchbot_src/models/e_stop/meshes/: button.stl
fetchbot_src/models/fence/: model.config  model.sdf
fetchbot_src/models/fence/meshes/: fence.stl
fetchbot_src/models/fire_exting/: model.config  model.sdf
fetchbot_src/models/fire_exting/meshes/: fire_exting.stl
fetchbot_src/models/trash_bin/: model.config  model.sdf
fetchbot_src/models/trash_bin/meshes/: big_bin.stl  short_bin.stl
fetchbot_src/sample_code/: depthImRead.cpp  sub2Image.cpp  testHeadControl.cpp
fetchbot_src/world/: fetch_recycles_world.sdf
