<?xml version="1.0"?>
<package format="2">
  <name>fetchbot</name>
  <version>0.9.2</version>
  <description>
    Package for SnC and Robotics Assignment.
  </description>
  <author>Brendan Munoz</author>
  <maintainer email="brendan.munoz@student.uts.edu.au">Brendan Munoz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <buildtool_depend>fetch_gazebo</buildtool_depend>
  <exec_depend>fetch_gazebo</exec_depend>
</package>