<?xml version="1.0"?>
<package format="2">
  <name>fetchbot</name>
  <version>1.0</version>
  <description>
    Package for SnC and Robotics Assignment.
  </description>
  <author>Brendan Munoz</author>
  <maintainer email="brendan.munoz@student.uts.edu.au">Brendan Munoz</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Add fetch_gazebo pkg -->
  <buildtool_depend>fetch_gazebo</buildtool_depend>
  <exec_depend>fetch_gazebo</exec_depend>

  <!-- Add fetch_moveit_config pkg -->
  <buildtool_depend>fetch_moveit_config</buildtool_depend>
  <exec_depend>fetch_moveit_config</exec_depend>
</package>